--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -130,7 +130,9 @@ g + geom_bar(stat = "Identity", alpha = 0.9) + geom_hline(yintercept=100, col = 
     theme(plot.title = element_text(size = 20,margin = margin(0,0,30,0)))
 ```
 
+
 Looking closer at the data in between 0800 and 0900 we see that there are values below 100 steps so I should take a deeper look into that later to get a better specification of the interval.
+
 
 ```{r, echo = TRUE}
 #
@@ -215,6 +217,7 @@ In the previous code we did already create that 1) data frame (stepsAvgIntDay) a
 
 Reading in the data again placing it in another data frame to keep all other information intact while we attempt and replace those missing values.
 
+
 ```{r, echo=TRUE}
 stepsOrig <- read.csv("activity.csv")
 stepsOrig$date <- as.Date(stepsOrig$date,"%Y-%m-%d")
@@ -225,6 +228,7 @@ colnames(stepsOrig) <- c("Steps","Day","Interval","WeekDay")
 
 
 How many missing values do we have? Executing mean(is.na(stepsOrig[1])) tells us roughly 13%. The Knitrcode code tells us `r format(100*mean(is.na(stepsOrig[1])), digits=4, decimal.mark=".", big.mark=",",small.mark="" , small.interval=2)`% of the observations have missing values. This is above 5% and can be considered as statistically significant not to be ignored.
+
 
 ```{r, echo=TRUE}
 
@@ -247,9 +251,11 @@ for (i in 1:nrow(stepsOrig)) {
 
 ```
 
+
 Plotting the new timeseries the total number of steps per day a lot more data emerges. The plots also answers question No.7 illustrating the imputed data.
 
-```{r, echo = TRUE}
+
+```{r, echo = TRUE, fig.width=15, fig.height=15}
 #
 # Average the values per day
 stepsOrigAvg <- as.data.frame(tapply(stepsOrig$Steps, stepsOrig$Day, sum))
@@ -307,7 +313,7 @@ Note 1: See previous charts for the daily weekday vs weekend activity pattern di
 Note 2: There are two days with 0 for all measurment intervals 2012-10-02 and 2012-11-15. These values have been left unadjusted for assuming that the step tracker was turned on but left at home.
 
 
-```{r, echo=TRUE}
+```{r, echo=TRUE, fig.width=15, fig.height=25}
 
 stepsOrigAvg$WeekDay <- weekdays(as.Date(stepsOrigAvg$Day))
 stepsOrigWEDays <- filter(data.table(stepsOrigAvg), WeekDay %in% c("Saturday","Sunday"))
@@ -354,6 +360,72 @@ p2 <- g + geom_bar(stat = "Identity", aes(fill=Day)) +
     ylab("Average Number of Steps") + 
     theme(axis.text.y = element_text(size=10,margin = margin(0,0,0,10))) +
     ggtitle("Average Number of Steps for Weekdays Adjusted for Missing Values") +
+    theme(plot.title = element_text(size = 20,margin = margin(0,0,30,0)))
+
+grid.arrange(p1,p2, nrow = 2, ncol = 1)
+```
+
+
+Plotting the interval pattern for weekend and weekdays we see a distinct difference during the days.
+
+
+```{r, echo=TRUE, fig.width=15, fig.height=15}
+#
+# Add the final plot comparing WE and WK interval patterns
+#
+stepsOrigIntWE <- filter(data.table(stepsOrig), WeekDay %in% c("Saturday","Sunday"))
+stepsOrigIntWEAvg <- as.data.frame(tapply(stepsOrigIntWE$Steps,stepsOrigIntWE$Interval,mean))
+stepsOrigIntWEAvg$Interval <- row.names(stepsOrigIntWEAvg)
+colnames(stepsOrigIntWEAvg) <- c("Steps","Interval")
+# Ensure geom_bar does not try and sort the x Axis
+stepsOrigIntWEAvg$Interval <- factor(stepsOrigIntWEAvg$Interval, levels = stepsAvgInt$Interval)
+
+
+stepsOrigIntWK <- filter(data.table(stepsOrig), WeekDay %in% c("Monday","Tuesday","Wednesday","Thursday","Friday"))
+stepsOrigIntWKAvg <- as.data.frame(tapply(stepsOrigIntWK$Steps,stepsOrigIntWK$Interval,mean))
+stepsOrigIntWKAvg$Interval <- row.names(stepsOrigIntWKAvg)
+colnames(stepsOrigIntWKAvg) <- c("Steps","Interval")
+# Ensure geom_bar does not try and sort the x Axis
+stepsOrigIntWKAvg$Interval <- factor(stepsOrigIntWKAvg$Interval, levels = stepsAvgInt$Interval)
+
+g <- ggplot(stepsOrigIntWEAvg, aes(x=Interval, y=Steps, fill = 20))
+p1 <- g + geom_bar(stat = "Identity", alpha = 0.9) +
+    theme(axis.text.x = element_text(angle = 90, hjust = 0)) +
+    theme(panel.background = element_rect(fill = "lightblue")) +
+    theme(strip.background = element_rect(fill = "lightblue")) +
+    theme(panel.grid.minor = element_blank()) +
+    theme(panel.grid.major = element_line(colour = "grey95")) +
+    theme(plot.margin=unit(c(2,1,1.5,1.2),"cm")) +
+    scale_y_continuous(labels = scales::comma) +
+    theme(legend.position="none") +
+    xlab("Weekend Intervals") +
+    #
+    # ticks only at the full hour
+    scale_x_discrete(breaks=seq(0,2355,100)) +
+    theme(axis.text.x = element_text(size=10,margin = margin(0,0,20,0))) +
+    ylab("Number of Steps per Interval") + 
+    theme(axis.text.y = element_text(size=10,margin = margin(0,0,0,10))) +
+    ggtitle("Average Number of Weekend Steps per Interval") +
+    theme(plot.title = element_text(size = 20,margin = margin(0,0,30,0)))
+
+g <- ggplot(stepsOrigIntWKAvg, aes(x=Interval, y=Steps, fill = 20))
+p2 <- g + geom_bar(stat = "Identity", alpha = 0.9) +
+    theme(axis.text.x = element_text(angle = 90, hjust = 0)) +
+    theme(panel.background = element_rect(fill = "lightblue")) +
+    theme(strip.background = element_rect(fill = "lightblue")) +
+    theme(panel.grid.minor = element_blank()) +
+    theme(panel.grid.major = element_line(colour = "grey95")) +
+    theme(plot.margin=unit(c(2,1,1.5,1.2),"cm")) +
+    scale_y_continuous(labels = scales::comma) +
+    theme(legend.position="none") +
+    xlab("Weekday Intervals") +
+    #
+    # ticks only at the full hour
+    scale_x_discrete(breaks=seq(0,2355,100)) +
+    theme(axis.text.x = element_text(size=10,margin = margin(0,0,20,0))) +
+    ylab("Number of Steps per Interval") + 
+    theme(axis.text.y = element_text(size=10,margin = margin(0,0,0,10))) +
+    ggtitle("Average Number of Weekend Steps per Interval") +
     theme(plot.title = element_text(size = 20,margin = margin(0,0,30,0)))
 
 grid.arrange(p1,p2, nrow = 2, ncol = 1)
